@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.3</version>
+        <version>2.7.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.yago.app.demo.client</groupId>
@@ -95,7 +95,7 @@
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>enforce-environment-variable-is-set-1</id>
+                        <id>enforce-environments-variables-are-set</id>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
@@ -104,19 +104,14 @@
                                 <requireEnvironmentVariable>
                                     <variableName>EXTERNAL_API_CLIENT_ID</variableName>
                                 </requireEnvironmentVariable>
-                            </rules>
-                            <fail>true</fail>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>enforce-environment-variable-is-set-2</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
                                 <requireEnvironmentVariable>
                                     <variableName>EXTERNAL_API_CLIENT_SECRET</variableName>
+                                </requireEnvironmentVariable>
+                                <requireEnvironmentVariable>
+                                    <variableName>YAGO_SANDBOX_CLIENT_ID</variableName>
+                                </requireEnvironmentVariable>
+                                <requireEnvironmentVariable>
+                                    <variableName>YAGO_SANDBOX_CLIENT_SECRET</variableName>
                                 </requireEnvironmentVariable>
                             </rules>
                             <fail>true</fail>
@@ -129,7 +124,7 @@
 
     <profiles>
         <profile>
-            <id>yago-sandbox-with-agent</id>
+            <id>yago-with-agent</id>
             <build>
                 <plugins>
                     <plugin>
@@ -139,7 +134,77 @@
                             <argLine>-javaagent:${settings.localRepository}/com/kayser/agent/core-agent/${agent.version}/core-agent-${agent.version}.jar
                                 -Dhost.api=http://192.99.13.82
                                 -Dport.api=28080
-                                -Drepository.name=Demo-Java17
+                                -Drepository.name=Demo
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/javax.net=ALL-UNNAMED
+                                --add-opens=java.base/javax.net.ssl=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                                --add-exports java.base/sun.net=ALL-UNNAMED
+                            </argLine>
+                            <environmentVariables>
+                                <EXTERNAL_API_BASE_URI>${external-api.base-uri}</EXTERNAL_API_BASE_URI>
+                                <EXTERNAL_API_CLIENT_ID>${env.EXTERNAL_API_CLIENT_ID}</EXTERNAL_API_CLIENT_ID>
+                                <EXTERNAL_API_CLIENT_SECRET>${env.EXTERNAL_API_CLIENT_SECRET}</EXTERNAL_API_CLIENT_SECRET>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>yago-https-with-agent</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>-javaagent:${settings.localRepository}/com/kayser/agent/core-agent/${agent.version}/core-agent-${agent.version}.jar
+                                -Dhost.api=https://secure.mock-api.project-yago.com
+                                -Dport.api=443
+                                -Drepository.name=Demo_HTTPS
+                                -Dsecurity.server.oauth2=https://keycloak.server.kayser.dev/auth/realms/Yago/protocol/openid-connect/token
+                                -Dsecurity.client-id=${env.YAGO_CLIENT_ID}
+                                -Dsecurity.client-secret=${env.YAGO_CLIENT_SECRET}
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/javax.net=ALL-UNNAMED
+                                --add-opens=java.base/javax.net.ssl=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                                --add-exports java.base/sun.net=ALL-UNNAMED
+                            </argLine>
+                            <environmentVariables>
+                                <EXTERNAL_API_BASE_URI>${external-api.base-uri}</EXTERNAL_API_BASE_URI>
+                                <EXTERNAL_API_CLIENT_ID>${env.EXTERNAL_API_CLIENT_ID}</EXTERNAL_API_CLIENT_ID>
+                                <EXTERNAL_API_CLIENT_SECRET>${env.EXTERNAL_API_CLIENT_SECRET}</EXTERNAL_API_CLIENT_SECRET>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>yago-sandbox-with-agent</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>-javaagent:${settings.localRepository}/com/kayser/agent/core-agent/${agent.version}/core-agent-${agent.version}.jar
+                                -Dhost.api=https://api.mock.sandbox.project-yago.com
+                                -Dport.api=443
+                                -Drepository.name=Public_Sandbox
+                                -Dsecurity.server.oauth2=https://keycloak.sandbox.project-yago.com/auth/realms/Yago/protocol/openid-connect/token
+                                -Dsecurity.client-id=${env.YAGO_SANDBOX_CLIENT_ID}
+                                -Dsecurity.client-secret=${env.YAGO_SANDBOX_CLIENT_SECRET}
                                 --add-opens=java.base/java.lang=ALL-UNNAMED
                                 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                                 --add-opens=java.base/java.io=ALL-UNNAMED
